--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -19,5 +19,7 @@
   "genre_comedy": "Comedy",
   "genre_horror": "Horror",
   "genre_action": "Action",
-  "genre_mystery": "Mystery"
+  "genre_mystery": "Mystery",
+  "coming_soon_title": "Coming Soon",
+  "coming_soon_genres": "Genres"
 }
