downloadPage, download all instead of one

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -24,5 +24,7 @@
   "coming_soon_genres": "Genres",
   "coming_soon_more_info": " More Info",
   "coming_soon_my_list": "My List",
-  "coming_soon_remind_me": "Remind Me"
+  "coming_soon_remind_me": "Remind Me",
+  "downloads_downloads": "Downloads",
+  "downloads_smart": "Smart Downloads"
 }
