--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -26,5 +26,10 @@
   "coming_soon_my_list": "My List",
   "coming_soon_remind_me": "Remind Me",
   "downloads_downloads": "Downloads",
-  "downloads_smart": "Smart Downloads"
+  "downloads_smart": "Smart Downloads",
+  "downloads_smart_feature": "Smart Downloads Feature",
+  "downloads_next_ep_title": "Download Next Episode",
+  "downloads_next_ep_text": "As you watch an episode of a series you’ve downloaded, we’ll get the next episode for you and delete what you’ve finished. Downloading only happens on Wi-Fi.",
+  "downloads_for_you_title": "Downloads for You",
+  "downloads_for_you_text": "We’ll download a selection of movies and shows so you always have something to watch. Downloading only happens on Wi-Fi"
 }
